data/all_generated_tests/raw_wast_tests/br_if_IncorrectConditionEvaluation_1705.wast
;; 6. **Test Description**: Place a `br_if` inside a `loop` that conditionally jumps to its beginning based on the loop variable. Iterate the loop with the condition toggling between true and false.    - **Constraint Checked**: Tests correct evaluation of the loop variable and appropriate branching.    - **Relation to Incorrect Evaluation**: Highlights inconsistency in the condition check that may lead to incorrect loop continuation behavior.

(assert_invalid
  (module
    (func $loop-conditional-branch (param $0 i32) (result i32)
      (local $1 i32)
      (local.set $1 (local.get $0))
      (loop (result i32)
        (br_if 0 (local.get $1)) ;; Check if condition evaluates correctly
        (local.set $1 (i32.sub (local.get $1) (i32.const 1)))
      )
      (local.get $1)
    )
  )
  "type mismatch"
)